# dataflow

./: .codacy.yml  .coveragerc  .gitignore  Makefile  README.md  setup.cfg  setup.py
.circleci/: .config.yml  config.yml
.dependabot/: config.yml
docs/: TODO.md
ops/docker/: README.md
ops/inventory/: local.ini
ops/tasks/: release.yml
requirements/: common.txt  tests.txt
tests/cli/: test_bin.py
ui/: package.json  tslint.yml
