[flake8]
import-order-style = pycharm
exclude = .env,.github,.pytest_cache,.vault,.vscode,__pycache__,docs,ops,build,dist,venv, .eggs

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = --junitxml=.reports/test-results.xml --cov-report=xml --cov=dataflow --cov-config .coveragerc